--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
                         <p>&nbsp<img src="./images/user-circle.png" alt="din">    Anne J</p><br>
                         <p>&nbsp<img src="./images/user-circle.png" alt="rin">    Alayne T</p><br>
                         <p>&nbsp<img src="./images/user-circle.png" alt="ri">     Arry Y</p><br>
+                        <div class="cardb">
                         <a href = "#">View more</a>
+                        </div>
                     </div>
     
-    
+                </div>
+            </body>
+            </html>
