--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <p>&nbsp<img src="./images/user-circle.png" alt="rin">    Alayne T</p><br>
                         <p>&nbsp<img src="./images/user-circle.png" alt="ri">     Arry Y</p><br>
                         <div class="cardb">
-                        <a href = "#">View more</a>
+                        <a href = "#">View More</a>
                         </div>
                     </div>
     
