--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
             <div class="card3">
                 <div class="card-header3">
-                    <p><img src="./images/2.png" alt="ph"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>Connection Requests</p>
+                    <p><img src="./images/2.png" alt="ph"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>
+                        Connection Requests</p>
                     <div class="carder3">
                     </div>
                 </div>
