--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     </div>
                 </div>
                 <div class="card-body3">
-                    <p><img src="./images/user-circle.png" alt="hello" &nbsp>&nbsp;&nbsp;&nbsp;Todd E</p>
-                    <p><img src="./images/user-circle.png" alt="use" &nbsp>&nbsp;&nbsp;&nbsp;Phil K</p>
+                    <p><img src="./images/user-circle.png" alt="hello">Todd E</p>
+                    <p><img src="./images/user-circle.png" alt="use">Phil K</p>
                 </div>
             </div>
             <!-- your connection box -->
