--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
                 <div class="dark-header">
                     <h3>Education</h3>
                 </div>
-                <div class="carder2">
-                </div>
                 <div class="card-body2">
                     <p>Coding Dojo - Full Stack Development</p>
                     <p>Dec 2019 - Mar 2020</p>
@@ -62,8 +60,7 @@
             <div class="card">
                 <div class="dark-header">
                     <p><span class="circular">2</span> Connection Requests</p>
-                    <div class="carder3">
-                    </div>
+                    
                 </div>
                 <div class="card-body3">
                     <p><img src="./images/user-circle.png" alt="hello">Todd E</p>
@@ -76,10 +73,10 @@
                     <p><span class="circular">500+</span> Your connections</p>
                 </div>
                 <div class="card-body4">
-                    <p>&nbsp<img src="./images/user-circle.png" alt="Ad"> Adrien D</p><br>
-                    <p>&nbsp<img src="./images/user-circle.png" alt="din"> Anne J</p><br>
-                    <p>&nbsp<img src="./images/user-circle.png" alt="rin"> Alayne T</p><br>
-                    <p>&nbsp<img src="./images/user-circle.png" alt="ri"> Arry Y</p><br>
+                    <p><img src="./images/user-circle.png" alt="Ad"> Adrien D</p><br>
+                    <p><img src="./images/user-circle.png" alt="din"> Anne J</p><br>
+                    <p><img src="./images/user-circle.png" alt="rin"> Alayne T</p><br>
+                    <p><img src="./images/user-circle.png" alt="ri"> Arry Y</p><br>
                     <div class="cardb">
                         <a href="#">View More</a>
                     </div>
@@ -88,5 +85,4 @@
         </aside>
     </div>
 </body>
-
 </html>
